--- a/resume.html
+++ b/resume.html
@@ -1,19 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beinex Resume</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="bg-light" >
+
+<body class="bg-light">
     <div class="container" p-5>
         <div class="row">
-            <div class="col-lg-4 bg-dark text-white text-center py-4"></div>
+            <div class="col-lg-4 bg-dark text-white text-center py-4">
+                <div class="header-left">
+                    <img src="melvin.jpg" alt="" class="img-thumbnail rounded-circle mb-2">
+                    <h1 class="display-5">Melvin Sibichen</h1>
+                    <h4 class="lead text-uppercase text-white-50 mb-4 ">Frontend Developer</h4>
+                </div>
+
+                <div>
+                    <h5 class="text-uppercase bg-white text-dark py-2 rounded-pill">contact</h5>
+                    <ul class="list-unstyled text-white-50 ml-5 py-2 text-left">
+                        <li class="list-item">
+                            <i class="fas fa-mobile-alt mx-4"></i> +91 9207008545
+                        </li>
+                        <li class="list-item">
+                            <i class="fas fa-envelope-open-text mx-4"></i>melvinsibichen1020@gmail.com
+                        </li>
+                        <li class="list-item">
+                            <i class="fas fa-blog mx-4"></i>https://github.com/melvinsibichen
+                        </li>
+                        <li class="list-item">
+                            <i class="fas fa-mobile-alt mx-4"></i>https://www.linkedin.com/in/melvin
+                            sibichen/
+                        </li>
+                        <li class="list-item">
+                            <i class="fas fa-map-marker-alt mx-4"></i>28-10-1998
+                        </li>
+                        <li class="list-item">
+                            <i class="fas fa-map-marker-alt mx-4"></i>Kerala
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h5 class="text-uppercase bg-white text-dark py-2 rounded-pill">Skils</h5>
+                    <ul class="list text-white-50 ml-5 py-2 text-left text-capitilize">
+                        <li class="list-item">Java</li>
+                        <li class="list-item">Angular Framework</li>
+                        <li class="list-item">HTML</li>
+                        <li class="list-item">CSS</li>
+                        <li class="list-item">TypeScript</li>
+                        <li class="list-item">SQL</li>
+                        <li class="list-item">Springboot Framework</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h5 class="text-uppercase bg-white text-dark py-2 rounded-pill">Languages</h5>
+                    <ul class="list text-white-50 ml-5 py-2 text-left text-capitilize">
+                        <li class="list-item">English</li>
+                        <li class="list-item">Malayalam</li>
+                        <li class="list-item">Tamil</li>
+                    </ul>
+                </div>
+
+
+            </div>
+            <div class="col-lg-8 bg-light text-dark py-5 px-5">
+                <div class="header-right">
+                    <h4 class="text-uppercase">career objective</h4>
+                    <hr>
+                    <p>Passionate full stack developer, having experience
+                        working on various frameworks and databases in a wide
+                        range of frontend and backend tools. I am a dedicated
+                        team player and have experience working
+                        collaboratively with cross functional teams. Also got a
+                        unique opportunity to start my career working for a
+                        software project in Underwater Ranges goa, a facility of
+                        Indian Navy, set up by Naval science and technology.
+                    </p>
+                </div>
+
+                <div>
+                    <h4 class="text-uppercase">work experience</h4>
+                    <hr>
+                    <ul class="list">
+                        <li class="list-item">
+                            <h5 class="display-6 text-uppercase">NEST DIGITAL | Software Engineer</h5>
+                            <h6 class="text-uppercase text-black-50">August 2022 -2023 1 Year</h6>
+                            <h6>Skills:</h6>
+                            <p>Angular,HTML,CSS,TypeScript,Bootstrap,CLI,Api Services
+                                Springboot,Core Java,SQL, PostMan ,GitHub
+                            </p>
+                        </li>
+
+                        <li class="list-item">
+                            <h5 class="display-6 text-uppercase">Mobilexion Technologies | Intern</h5>
+                            <h6 class="text-uppercase text-black-50">January 2022- March 2022 (Internship)</h6>
+                            <p>Assisted on developing UWR project for Indian Navy</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="text-uppercase">education</h4>
+                    <hr>
+                    <ul class="list">
+                        <li class="list-item">
+                            <h5 class="display-6 text-uppercase">Rajagiri College of Social Sciences, Kalamassery</h5>
+                            <h6 class="text-uppercase text-black-50">Master of Computer Application (2020-2022)</h6>
+                            <h6>Project: ERP-Students Assignment Evaluation</h6>
+                            <p>Technologies Used: Laravel,SQL,HTML,CSS ,Bootstrap
+                            </p>
+                        </li>
+
+                        <li class="list-item">
+                            <h5 class="display-6 text-uppercase">Marian College Kuttikanam (Autonomous)</h5>
+                            <h6 class="text-uppercase text-black-50">Bachelor of Computer Application (2017-2020)</h6>
+                            <h6>Project: Serverless Webhosting</h6>
+                            <p>AWS Services Used:AWS lambda,S3 bucket,ApI
+                                Gateway,Route53</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h4 class="text-uppercase">certification</h4>
+                    <hr>
+                    <ul class="list">
+                        <li class="list-item">
+                            <h5 class="display-6 text-uppercase">Angular HackerRank</h5>
+                        </li>
+                        <li class="list-item">
+                            <h5 class="display-6 text-uppercase">Springboot HackerRank</h5>
+                        </li>
+                        <li class="list-item">
+                            <h5 class="display-6 text-uppercase">SQL HackerRank</h5>
+                        </li>
+                        <li class="list-item">
+                            <h5 class="display-6 text-uppercase">Python for DataScience IBM</h5>
+                        </li>
+                    </ul>
+                </div>
+
+
+            </div>
         </div>
     </div>
-   
+
 </body>
+
 </html>
