--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beinex Resume</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -14,43 +16,43 @@
 </head>
 
 <body class="bg-light">
-    <div class="container" p-5>
+    <div class="container">
         <div class="row">
-            <div class="col-lg-4 bg-dark text-white text-center py-4">
+            <div class="col-lg-4 bg-secondary  text-white text-center py-4">
                 <div class="header-left">
-                    <img src="melvin.jpg" alt="" class="img-thumbnail rounded-circle mb-2">
-                    <h1 class="display-5">Melvin Sibichen</h1>
-                    <h4 class="lead text-uppercase text-white-50 mb-4 ">Frontend Developer</h4>
+                    <img src="melvin.jpg" alt="" class="img-thumbnail rounded-circle mb-3">
+                    <h1 class="display-5">MELVIN SIBICHEN</h1>
+                    <h3 class="lead text-uppercase text-white-50-bold mb-4">Frontend Developer</h3>
                 </div>
 
                 <div>
-                    <h5 class="text-uppercase bg-white text-dark py-2 rounded-pill">contact</h5>
-                    <ul class="list-unstyled text-white-50 ml-5 py-2 text-left">
+                    <h4 class="text-uppercase bg-white text-dark py-2 rounded-pill">contact</h4>
+                    <ul class="list-unstyled text-dark-50 ml-0 py-2 text-left">
                         <li class="list-item">
-                            <i class="fas fa-mobile-alt mx-4"></i> +91 9207008545
+                            <i class="fas fa-mobile-alt mx-2"></i>+91 9207008545
                         </li>
                         <li class="list-item">
-                            <i class="fas fa-envelope-open-text mx-4"></i>melvinsibichen1020@gmail.com
+                            <i class="fas fa-envelope-open-text mx-2"></i>melvinsibichen1020@gmail.com
                         </li>
                         <li class="list-item">
-                            <i class="fas fa-blog mx-4"></i>https://github.com/melvinsibichen
+                            <i class="fa-brands fa-github mx-2"></i>https://github.com/melvinsibichen
                         </li>
                         <li class="list-item">
-                            <i class="fas fa-mobile-alt mx-4"></i>https://www.linkedin.com/in/melvin
+                            <i class="fa-brands fa-linkedin mx-2"></i>https://www.linkedin.com/in/melvin
                             sibichen/
                         </li>
                         <li class="list-item">
-                            <i class="fas fa-map-marker-alt mx-4"></i>28-10-1998
+                            <i class="fa-regular fa-calendar-days mx-2"></i>28-10-1998
                         </li>
                         <li class="list-item">
-                            <i class="fas fa-map-marker-alt mx-4"></i>Kerala
+                            <i class="fas fa-map-marker-alt mx-2"></i>Kerala
                         </li>
                     </ul>
                 </div>
 
                 <div>
-                    <h5 class="text-uppercase bg-white text-dark py-2 rounded-pill">Skils</h5>
-                    <ul class="list text-white-50 ml-5 py-2 text-left text-capitilize">
+                    <h4 class="text-uppercase bg-white text-dark py-2 rounded-pill">Skils</h4>
+                    <ul class="list text-dark-50 ml-0 py-2 text-left text-capitalize">
                         <li class="list-item">Java</li>
                         <li class="list-item">Angular Framework</li>
                         <li class="list-item">HTML</li>
@@ -62,98 +64,113 @@
                 </div>
 
                 <div>
-                    <h5 class="text-uppercase bg-white text-dark py-2 rounded-pill">Languages</h5>
-                    <ul class="list text-white-50 ml-5 py-2 text-left text-capitilize">
+                    <h4 class="text-uppercase bg-white text-dark py-2 rounded-pill">Languages</h4>
+                    <ul class="list text-dark-50 ml-0 py-2 text-left text-capitalize">
                         <li class="list-item">English</li>
                         <li class="list-item">Malayalam</li>
                         <li class="list-item">Tamil</li>
                     </ul>
                 </div>
-
-
             </div>
+
+
             <div class="col-lg-8 bg-light text-dark py-5 px-5">
                 <div class="header-right">
-                    <h4 class="text-uppercase">career objective</h4>
+                    <h2 class="text-uppercase">career objective</h2>
                     <hr>
-                    <p>Passionate full stack developer, having experience
-                        working on various frameworks and databases in a wide
-                        range of frontend and backend tools. I am a dedicated
-                        team player and have experience working
-                        collaboratively with cross functional teams. Also got a
-                        unique opportunity to start my career working for a
-                        software project in Underwater Ranges goa, a facility of
-                        Indian Navy, set up by Naval science and technology.
+                    <p><strong>Passionate full stack developer, having experience
+                            working on various frameworks and databases in a wide
+                            range of frontend and backend tools. I am a dedicated
+                            team player and have experience working
+                            collaboratively with cross functional teams. Also got a
+                            unique opportunity to start my career working for a
+                            software project in Underwater Ranges goa, a facility of
+                            Indian Navy, set up by Naval science and technology.</strong>
                     </p>
                 </div>
 
                 <div>
-                    <h4 class="text-uppercase">work experience</h4>
+                    <h2 class="text-uppercase">work experience</h2>
                     <hr>
                     <ul class="list">
                         <li class="list-item">
-                            <h5 class="display-6 text-uppercase">NEST DIGITAL | Software Engineer</h5>
-                            <h6 class="text-uppercase text-black-50">August 2022 -2023 1 Year</h6>
-                            <h6>Skills:</h6>
-                            <p>Angular,HTML,CSS,TypeScript,Bootstrap,CLI,Api Services
-                                Springboot,Core Java,SQL, PostMan ,GitHub
-                            </p>
+                            <h3 class="text-uppercase">NEST DIGITAL | Software Engineer</h3>
+                            <h5 class="text-uppercase text-black">August 2022 -2023 | 1 Year</h5>
+                            <h5>Skills:</h5>
+                            <h6>Angular,HTML,CSS,TypeScript,Bootstrap,CLI,Api Services,Springboot,Core
+                                Java,SQL,PostMan,GitHub</h6>
                         </li>
 
                         <li class="list-item">
-                            <h5 class="display-6 text-uppercase">Mobilexion Technologies | Intern</h5>
-                            <h6 class="text-uppercase text-black-50">January 2022- March 2022 (Internship)</h6>
-                            <p>Assisted on developing UWR project for Indian Navy</p>
+                            <h3 class="text-uppercase">Mobilexion Technologies | Intern</h3>
+                            <h5 class="text-uppercase text-black">January 2022- March 2022 (Internship)</h5>
+                            <h6>Assisted on developing UWR project for Indian Navy</h6>
                         </li>
                     </ul>
                 </div>
 
                 <div>
-                    <h4 class="text-uppercase">education</h4>
+                    <h2 class="text-uppercase">education</h2>
                     <hr>
                     <ul class="list">
                         <li class="list-item">
-                            <h5 class="display-6 text-uppercase">Rajagiri College of Social Sciences, Kalamassery</h5>
-                            <h6 class="text-uppercase text-black-50">Master of Computer Application (2020-2022)</h6>
-                            <h6>Project: ERP-Students Assignment Evaluation</h6>
-                            <p>Technologies Used: Laravel,SQL,HTML,CSS ,Bootstrap
-                            </p>
+                            <h3 class=" text-uppercase">Rajagiri College of Social Sciences, Kalamassery</h3>
+                            <h5 class="text-uppercase text-black">Master of Computer Application (2020-2022)</h5>
+                            <h5>Project: ERP-Students Assignment Evaluation</h5>
+                            <h6>Technologies Used: Laravel,SQL,HTML,CSS ,Bootstrap</h6>
                         </li>
 
                         <li class="list-item">
-                            <h5 class="display-6 text-uppercase">Marian College Kuttikanam (Autonomous)</h5>
-                            <h6 class="text-uppercase text-black-50">Bachelor of Computer Application (2017-2020)</h6>
-                            <h6>Project: Serverless Webhosting</h6>
-                            <p>AWS Services Used:AWS lambda,S3 bucket,ApI
-                                Gateway,Route53</p>
+                            <h3 class="text-uppercase">Marian College Kuttikanam (Autonomous)</h3>
+                            <h5 class="text-uppercase text-black">Bachelor of Computer Application (2017-2020)</h5>
+                            <h5>Project: Serverless Webhosting</h5>
+                            <h6>AWS Services Used:AWS lambda,S3 bucket,ApI Gateway,Route53</h6>
                         </li>
                     </ul>
                 </div>
 
                 <div>
-                    <h4 class="text-uppercase">certification</h4>
+                    <h2 class="text-uppercase">certification</h2>
                     <hr>
-                    <ul class="list">
-                        <li class="list-item">
-                            <h5 class="display-6 text-uppercase">Angular HackerRank</h5>
-                        </li>
-                        <li class="list-item">
-                            <h5 class="display-6 text-uppercase">Springboot HackerRank</h5>
-                        </li>
-                        <li class="list-item">
-                            <h5 class="display-6 text-uppercase">SQL HackerRank</h5>
-                        </li>
-                        <li class="list-item">
-                            <h5 class="display-6 text-uppercase">Python for DataScience IBM</h5>
-                        </li>
-                    </ul>
+                    <div class="row">
+                        <div class="col">
+                            <ul class="list">
+                                <li class="list-item">
+                                    <h5 class="text-uppercase">Angular</h5>
+                                </li>
+                                <li class="list-item">
+                                    <h5 class=" text-uppercase">Springboot</h5>
+                                </li>
+                                <li class="list-item">
+                                    <h5 class=" text-uppercase">SQL </h5>
+                                </li>
+                                <li class="list-item">
+                                    <h5 class=" text-uppercase">Python for DataScience </h5>
+                                </li>
+                            </ul>
+                        </div>
+
+
+                        <div class="col">
+                            <ul class="list" style="list-style-type: none;">
+                                <li class="list-item">
+                                    <h5 class="  text-uppercase ">HackerRank</h5>
+                                </li>
+                                <li class="list-item">
+                                    <h5 class=" text-uppercase">HackerRank</h5>
+                                </li>
+                                <li class="list-item">
+                                    <h5 class=" text-uppercase">HackerRank</h5>
+                                </li>
+                                <li class="list-item">
+                                    <h5 class=" text-uppercase">IBM</h5>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-
-
             </div>
         </div>
     </div>
-
 </body>
-
 </html>
