--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
             </div>
 
 
-            <div class="col-lg-8 bg-light text-dark py-5 px-5">
+            <div class="col-lg-8 bg-light text-dark py-5 px-5" style="border: 2px solid black;">
                 <div class="header-right">
                     <h2 class="text-uppercase">career objective</h2>
                     <hr>
